--- a/Pride&Prejudice.html
+++ b/Pride&Prejudice.html
@@ -21,8 +21,8 @@
 
 <br><br>
 <ol>
-  <h2><li><a href="file:///C:/Users/User/Desktop/P&P/1.TheCharacters.html">Characters</a></li></h2>
-  <h2><li><a href="file:///C:/Users/User/Desktop/P&P/2.Story.html">Story</a></li></h2>
+  <h2><li><a href="1.TheCharacters.html">Characters</a></li></h2>
+  <h2><li><a href="2.Story.html">Story</a></li></h2>
 
 </ol>
 
